--- a/package.json
+++ b/package.json
@@ -8,6 +8,9 @@
   "license": "BSD-3-Clause",
   "type": "module",
   "exports": "./exports.js",
+  "scripts": {
+    "test": "npx debris"
+  },
   "dependencies": {
     "debris": "^0.4.0",
     "dyndef": "^0.1.0"
